appId: com.curata.mvp
---
- launchApp
- tapOn: "E-mail"
- inputText: "curador@test.com"
- tapOn: "Senha"
- inputText: "123456"
- tapOn: "Entrar"
- assertVisible: "Mapa de Obras"

# Fluxo de Cadastro
- tapOn: "map-fab"
- assertVisible: "Nova Obra"
- tapOn: "Nome da Obra"
- inputText: "Estátua da Liberdade"
- tapOn: "Salvar"
- assertVisible: "Mapa de Obras"

# Fluxo de Detalhes e Inspeção
- tapOn: "Estátua da Liberdade"
- assertVisible: "Ver detalhes da obra"
- tapOn: "Ver detalhes da obra"
- assertVisible: "Nova Inspeção"
- tapOn: "Nova Inspeção"
- tapOn: "Condição Estrutural *"
- inputText: "Bom estado, sem trincas."
- tapOn: "Condição Superficial *"
- inputText: "Sem sujidade."
- tapOn: "Recomendação Técnica *"
- inputText: "Manter limpeza."
- tapOn: "Finalizar Inspeção"

# Geração de Relatório
- assertVisible: "Gerar Relatório"
- tapOn: "Gerar Relatório"
- assertVisible: "FORMATO DE EXPORTAÇÃO"
- tapOn: "Exportar PDF"
